# SatsForGood

./: PRODUCTION.md  README.md  docker-compose.yml
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  images-manifest.json  next-server.js.nft.json  postcss.js  prerender-manifest.json  required-server-files.json  trace
.next/cache/: .previewinfo
.next/server/: middleware-build-manifest.js
.next/server/app/: _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 366f6_15a1e2e7._.js  366f6_15a1e2e7._.js.map  862.js  [root-of-the-server]__34639da3._.js  [root-of-the-server]__34639da3._.js.map
.next/server/pages/: 404.html  500.html  _app.js  _document.js  _document.js.nft.json  _error.js
.next/static/chunks/: 175-1cc2165c17d155c9.js  366f6_3c034f1d._.js  366f6_3c034f1d._.js.map  366f6_72a4383c._.js  366f6_72a4383c._.js.map  366f6_99f415e7._.js  366f6_99f415e7._.js.map  366f6_@swc_helpers_cjs_fc61ea96._.js  366f6_@swc_helpers_cjs_fc61ea96._.js.map  366f6_d7f46769._.js  366f6_d7f46769._.js.map  366f6_f6c11206._.js  366f6_f6c11206._.js.map  366f6_next_app_ba3c12c2.js  366f6_next_app_ba3c12c2.js.map  366f6_next_dist_0ef9657b._.js  366f6_next_dist_0ef9657b._.js.map  366f6_next_dist_265e42ca._.js  366f6_next_dist_265e42ca._.js.map  (+50 more)
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: main.rs
src/app/: layout.tsx  page.tsx
src/components/: donate-form.tsx  donation-receipt.tsx  donation-stats.tsx  invoice-qr.tsx  recent-donations.tsx
src/lib/: api.ts  types.ts
(+73 files in other folders)
