[package]
name = "lightning-donation-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bitcoin = { version = "0.29", features = ["std"] }
lightning-invoice = { version = "0.26" }
qr2term = "0.3.0"
rand = "0.8"
chrono = { version = "0.4", features = ["std", "serde"] }
base64 = "0.21"
hex = "0.4"
qrcode = "0.13"
image = "0.24"
uuid = { version = "1.0", features = ["v4"] }